// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display favorite groups 1`] = `
<DocumentFragment>
  <div
    class="mdc-menu-surface--anchor"
  >
    <div
      aria-hidden="true"
      class="mdc-menu mdc-menu-surface"
      style="width: 178px;"
    >
      <ul
        class="mdc-list mdc-menu__items mdc-list"
        role="menu"
      >
        <li
          class="mdc-list-item"
          role="menuitem"
          tabindex="0"
        >
          <div>
            group 1
          </div>
        </li>
        <li
          class="mdc-list-item"
          role="menuitem"
          tabindex="0"
        >
          <div>
            group 2
          </div>
        </li>
        <li
          class="mdc-list-divider"
          role="separator"
        />
        <li
          class="mdc-list-item"
          role="menuitem"
          tabindex="0"
        >
          New
        </li>
      </ul>
    </div>
    <button
      class="grouped-registration-header-add-button prevent-propagation mdc-button mdc-button--dense"
    >
      <div
        class="mdc-button__ripple"
      />
      <span
        class="mdc-button__label"
      >
        +
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`should not crash without favorite groups 1`] = `
<DocumentFragment>
  <div
    class="mdc-menu-surface--anchor"
  >
    <div
      aria-hidden="true"
      class="mdc-menu mdc-menu-surface"
      style="width: 178px;"
    >
      <ul
        class="mdc-list mdc-menu__items mdc-list"
        role="menu"
      >
        <li
          class="mdc-list-divider"
          role="separator"
        />
        <li
          class="mdc-list-item"
          role="menuitem"
          tabindex="0"
        >
          New
        </li>
      </ul>
    </div>
    <button
      class="grouped-registration-header-add-button prevent-propagation mdc-button mdc-button--dense"
    >
      <div
        class="mdc-button__ripple"
      />
      <span
        class="mdc-button__label"
      >
        +
      </span>
    </button>
  </div>
</DocumentFragment>
`;
